test/spec_vectors/load/fail/module_27.wat
(module (memory 1) (func $load_f64 (f64.load (i32.const 0))))